# react-github-learning-roi-analysis

./: .gitignore  .mcp.json  LICENSE  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  csv_service.py  database.py  kusto.py  main.py  models.py  munger_cache.py  skill_journey.py  skill_service.py
backend/app/middleware/: __init__.py  logging.py  rate_limit.py
backend/app/routes/: company.py  copilot.py  enriched.py  health.py  hydro.py  impact.py  journey.py  learners.py  metrics.py  query.py
backend/tests/: conftest.py  test_api.py  test_logging.py  test_rate_limit.py
docs/: DATA_PRINCIPLES.md  DATA_STRATEGY.md  DATA_SYNC.md  METRICS.yaml
e2e/: app.spec.ts
scripts/: add_geographic_data.py  aggregate-data.ts  analyze_attribution.py  analyze_data_quality.py  analyze_dotcom_mapping.py  analyze_email_domains.py  analyze_enrichment.py  analyze_join_issue.py  analyze_partner.py  analyze_tpid.py  auto-sync.sh  batch_precert_query.py  calc_precert.py  calculate_precert_local.py  check_ace_structure.py  check_cache_overlap.py  check_company_fields.py  check_date_ranges.py  check_exam_company.py  check_journey_data.py  check_overlap.py  compare_enrichment_methods.py  diagnose_journey.py  explore_all_kusto_tables.py  explore_hierarchy.py  explore_hydro_ace.py  explore_kusto_tables.py  explore_snapshots_dotcom.py  fetch-copilot-metrics.py  fetch-github-activity.py  fetch-skills-progress.py  find_ace_tables.py  (+16 more)
(+139 files in other folders)
